# deepdrive

./: .devcontainer  .dockerignore  .gitignore  .gitmodules  .session.yml  .tmux.conf  Dockerfile  Dockerfile.dev  Dockerfile.simulator  Makefile  README.md  deepdrive.repos  deepdrive2.repos  depthai.repos  docker-compose.yml  install_deps.sh  power.md  setup_ws.sh
.devcontainers/: devcontainers.json
notebooks/: motor.ipynb
novnc/: Dockerfile  (+2 more)
src/deepdrive/: CMakeLists.txt  package.xml
src/deepdrive_bringup/: CMakeLists.txt  README.md  package.xml
src/deepdrive_bringup/config/: ekf.yaml  imu_bno08x.yaml  joystick.yaml
src/deepdrive_bringup/config/ekf/: base_to_footprint.yaml  footprint_to_odom.yaml
src/deepdrive_bringup/launch/: audio.launch.py  camera_rtabmap.launch.py  camera_stereo_inertial_node.launch.py  foxglove_bridge_launch.xml  launch_control.launch.py  launch_sim.launch.py  lidar.launch.xml  localization.launch.py  localization.launch.xml  robot.launch.py  robot.launch.xml  robot_real.launch.py  robot_state_publisher.launch.py  rviz2.launch.py  speed_test.launch.xml
src/deepdrive_bringup/param/: deepdrive.yaml  twist_mux.yaml
src/deepdrive_bringup/script/: create_udev_rules
src/deepdrive_camera/: CMakeLists.txt  README.md  package.xml
src/deepdrive_camera/launch/: camera.launch.py  camera.launch.xml  camera_rgbd_pcl.launch.py  camera_rtabmap.launch.py  camera_stereo_inertial_node.launch.py  deepdrive_state_publisher.launch.py  example_marker_publish.launch.py  example_segmentation.launch.py  pointcloud.launch.py  wide_angle_camera.launch.xml  yolov4_publisher.launch.py
src/deepdrive_camera/param/: detection.yaml  pcl.yaml  rgbd.yaml  uncalibrated_parameters.ini  wide_calibrated.ini  wide_calibrated.yaml
src/deepdrive_cartographer/: CMakeLists.txt  package.xml
src/deepdrive_cartographer/launch/: cartographer.launch.py
src/deepdrive_control/: CMakeLists.txt  README.md  deepdrive_control.xml  package.xml
src/deepdrive_control/config/: controllers.yaml
src/deepdrive_control/hardware/: controller_plugin.cpp  deepdrive_system.cpp  motor.cpp
src/deepdrive_control/hardware/include/: controller_plugin.hpp  motor.hpp
src/deepdrive_control/hardware/include/deepdrive/: deepdrive_system.hpp  visibility_control.h
src/deepdrive_control/launch/: control.launch.py
src/deepdrive_control/urdf/: ros2_control.xacro
src/deepdrive_micro/: CMakeLists.txt  README.md  deepdrive_micro.c  deepdrive_micro.uf2  led_ring.c  servo.c  servo.h
src/deepdrive_node/: CMakeLists.txt  README.md  package.xml
src/deepdrive_node/config/: deepdrive_node.yaml
src/deepdrive_node/include/deepdrive_node/: control_table.hpp  deepdrive.hpp  diff_drive_controller.hpp  dynamixel_sdk_wrapper.hpp  joint_state.hpp  motor_control.hpp  motors.hpp  odometry.hpp  odometry_publisher.hpp  pid.hpp
src/deepdrive_node/include/deepdrive_node/devices/: devices.hpp  motor_power.hpp  reset.hpp  sound.hpp
src/deepdrive_node/include/deepdrive_node/sensors/: battery_state.hpp  imu.hpp  joint_state.hpp  sensor_state.hpp  sensors.hpp
src/deepdrive_node/launch/: deepdrive_node.launch.py
src/deepdrive_node/param/: deepdrive_node.yaml
src/deepdrive_node/src/: deepdrive.cpp  diff_drive_controller.cpp  dynamixel_sdk_wrapper.cpp  joint_state.cpp  main.cpp  motor_control.cpp  motors.cpp  node_main.cpp  odometry.cpp  odometry_publisher.cpp  pid.cpp
src/deepdrive_node/src/devices/: motor_power.cpp  reset.cpp  sound.cpp
src/deepdrive_node/src/sensors/: battery_state.cpp  imu.cpp  joint_state.cpp  sensor_state.cpp
src/deepdrive_node/test/: test_pid.cpp  test_pid.hpp
src/deepdrive_simulations/deepdrive_gazebo/: CMakeLists.txt  package.xml
src/deepdrive_simulations/deepdrive_gazebo/include/deepdrive_gazebo/: deepdrive_drive.hpp
src/deepdrive_simulations/deepdrive_gazebo/launch/: deepdrive_dqn_stage1.launch.py  deepdrive_dqn_stage2.launch.py  deepdrive_dqn_stage3.launch.py  deepdrive_dqn_stage4.launch.py  deepdrive_house.launch.py  deepdrive_simulation_launch.py  deepdrive_world.launch.py  empty_world.launch.py  robot_state_publisher.launch.py  spawn_deepdrive.launch.py
src/deepdrive_simulations/deepdrive_gazebo/models/deepdrive_common/: model.config
src/deepdrive_simulations/deepdrive_gazebo/models/deepdrive_deepdrive/: model-1_4.sdf  model.config  model.sdf
src/deepdrive_simulations/deepdrive_gazebo/models/deepdrive_dqn_world/: model.config  model.sdf
src/deepdrive_simulations/deepdrive_gazebo/models/deepdrive_house/: model.config  model.sdf
src/deepdrive_simulations/deepdrive_gazebo/models/deepdrive_world/: model-1_4.sdf  model.config  model.sdf
src/deepdrive_simulations/deepdrive_gazebo/src/: deepdrive_drive.cpp
src/deepdrive_simulations/deepdrive_gazebo/urdf/: deepdrive_deepdrive.urdf
src/deepdrive_simulations/deepdrive_gazebo/worlds/: deepdrive_dqn_stage1.world  deepdrive_dqn_stage2.world  deepdrive_dqn_stage3.world  deepdrive_dqn_stage4.world  deepdrive_house.world
src/deepdrive_teleop/: README.md  package.xml  setup.cfg  setup.py
src/deepdrive_teleop/deepdrive_teleop/script/: teleop_keyboard.py
src/differential_drive/: README.md  package.xml  setup.py
src/differential_drive/config/: differential_drive.yaml
src/differential_drive/launch/: differential_drive.launch.py
src/differential_drive/src/differential_drive/: diff_tf.py  pid_velocity.py  twist_to_motors.py  virtual_joystick.py  wheel_loopback.py  wheel_scaler.py
src/imu_bno08x/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
src/imu_bno08x/config/: ekf.yaml  imu_bno08x.yaml
src/imu_bno08x/imu_bno08x/: dummy_odom.py  publisher.py
src/imu_bno08x/launch/: description.launch.py  display.launch.py  imu.launch.py  imu_bno08x.launch.py
src/imu_bno08x/urdf/: imu.urdf
src/ros2_differential_drive/: package.xml  setup.cfg  setup.py
src/ros2_differential_drive/config/: differential_drive.yaml
src/ros2_differential_drive/launch/: differential_drive.launch.py
src/ros2_differential_drive/src/differential_drive/: diff_tf.py  twist_to_motors.py  virtual_joystick.py  wheel_scaler.py
(+146 files in other folders)
