<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>deepdrive</name>
  <version>0.0.1</version>
  <description>Deepdrive Differential drive robot for machine learning</description>
  <maintainer email="matt@aimatt.com">Matt Williamson</maintainer>
  <license>MIT License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>deepdrive_bringup</exec_depend>
  <exec_depend>deepdrive_cartographer</exec_depend>
  <exec_depend>deepdrive_description</exec_depend>
  <exec_depend>deepdrive_example</exec_depend>
  <exec_depend>deepdrive_navigation2</exec_depend>
  <exec_depend>deepdrive_node</exec_depend>
  <exec_depend>deepdrive_teleop</exec_depend>
  <exec_depend>deepdrive_navigation2</exec_depend>
  <exec_depend>deepdrive_gazebo</exec_depend>
  <exec_depend>deepdrive_nav2_bringup</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
