<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>deepdrive_bringup</name>
  <version>2.1.5</version>
  <description>
    ROS 2 launch scripts for starting the Deepdrive
  </description>
  <maintainer email="matt@aimatt.com">Matt Williamson</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://aimatt.com</url>
  <url type="repository">https://github.com/mattwilliamson/deepdrive</url>
  <url type="bugtracker">https://github.com/mattwilliamson/deepdrive/issues</url>
  <author email="matt@aimatt.com">Matt Williamson</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>deepdrive_description</exec_depend>
  <exec_depend>deepdrive_hardware</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
