<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>differential_drive</name>
    <version>0.1.0</version>
    <description>
        The differential_drive package is the controller for the independent wheels based on comd_vel
    </description>

    <maintainer email="matt@aimatt.com">Matt Williamson</maintainer>
    
    <license>MIT</license>

    <url type="repository">https://github.com/mattwilliamson/deepdrive</url>
    <url type="website">https://aimatt.com/</url>

    <author email="matt@aimatt.com">Matt Williamson</author>

    <depend>rclpy</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>tf2</depend>


    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <build_type>ament_python</build_type>
    </export>

</package>
