<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>deepdrive_gazebo</name>
  <version>2.2.6</version>
  <description>
    Gazebo simulation package for the Deepdrive
  </description>
  <maintainer email="matt@aimatt.com">Matt Williamson</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://aimatt.com</url>
  <url type="repository">https://github.com/mattwilliamson/deepdrive</url>
  <url type="bugtracker">https://github.com/mattwilliamson/deepdrive/issues</url>
  <author email="matt@aimatt.com">Matt Williamson</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
